<resources>
    <string name="app_name">Pregacare</string>
    <string name="google_maps_api_key">AIzaSyACuVgELo16hDhRJt32gEAsfBr7QdfIMXA</string>
    <string name="hint_aadhar_id">Aadhar ID</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="register">REGISTER</string>
    <string name="submit">SUBMIT</string>
    <string name="err_field_empty">This field cannot be empty</string>
    <string name="select_hospitals">Select Hospital</string>
    <string name="select_date">Select Date</string>
    <string name="your_date">Your Date : </string>
    <string name="select_slot">Select Slot</string>
    <string name="select_blood_bank">Select Blood Bank</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="select_drug_store">Select Drug Store</string>
    <string name="week1">Fresh fruits and vegetables.\n\nStarchy foods, such as rice, rotis (including mixed grain or stuffed roti), whole grain bread, pasta, and baked/boiled potatoes.\n\nFoods rich in protein, such as lean meat and chicken, eggs, pulses (such as beans and lentils) and soya nuggets.\n\nDairy foods, such as milk, cheese, cottage cheese (paneer) and curd/yoghurt</string>
    <string name="week2">If you have morning sickness, you may not have much of an appetite at the moment. Try having small, regular meals and plenty of drinks. This may help to ease your nausea and keep your energy up if you’re feeling very tired.\n\nNausea is not only unpleasant, but it can be tricky to deal with if you have not yet gone public about your pregnancy. Although it is often called morning sickness, nausea can occur at any time of the day.\n\nKeep biscuits (or cream crackers) by your bed and nibble one or two before getting up from your bed in the morning. This can be repeated every time you lie down during the day as well.\n\nEat small, mildly flavoured snacks between meals, such as poha or plain khakara.</string>

</resources>
