<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_registration"
    tools:context=".activities.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:fontFamily="@font/raleway_bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_aadhar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:paddingTop="4dp"
            android:background="@color/pink_high">

            <EditText
                android:id="@+id/input_aadhar"
                style="@style/CustomEditTextFormatStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_aadhar_id"
                android:inputType="number"
                android:maxLength="13"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_register_mobile"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="30dp"
            android:paddingTop="4dp"
            android:background="@color/pink_high">

            <EditText
                android:id="@+id/input_register_mobile"
                style="@style/CustomEditTextFormatStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_register_password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="30dp"
            android:paddingTop="4dp"
            android:background="@color/pink_high">

            <EditText
                android:id="@+id/input_register_password"
                style="@style/CustomEditTextFormatStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="30dp"
            android:paddingTop="4dp"
            android:background="@color/pink_high">

            <EditText
                android:id="@+id/input_confirm_password"
                style="@style/CustomEditTextFormatStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_retype_password"
                android:inputType="textPassword"
                android:paddingBottom="12dp"
                android:paddingEnd="12dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_bold"
            android:textSize="15sp"
            android:background="@drawable/button_rounded_corner"/>

    </LinearLayout>

</ScrollView>